--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,5 +42,17 @@ jobs:
         with:
           path: ./dist
 
-      - name: Deploy
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+
+    permissions:
+      pages: write
+      id-token: write
+
+    environment:
+      name: github-pages   # 👈 THIS FIXES YOUR ERROR
+
+    steps:
+      - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
